--- a/VkAuth.WinForm/MainWindow.xaml
+++ b/VkAuth.WinForm/MainWindow.xaml
@@ -3,14 +3,23 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:VkAuth.WinForm"
         mc:Ignorable="d"
         Title="MainWindow" Height="222.088" Width="316.968">
-    <Grid>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="131,26,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="168" Name="loginTb"/>
-        <PasswordBox HorizontalAlignment="Left" Margin="131,76,0,0" VerticalAlignment="Top" Width="168" Height="23" Name="passwordTb"/>
-        <Label Content="Телефон или email " HorizontalAlignment="Left" Margin="10,23,0,0" VerticalAlignment="Top"/>
-        <Label Content="Пароль" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top"/>
-        <Button Content="Войти" HorizontalAlignment="Left" Margin="131,120,0,0" VerticalAlignment="Top" Width="100px" Background="#5181b8" Foreground="#fff" Height="35px" Click="Button_Click"/>
+    <Grid IsEnabled="True">
+        <TextBox HorizontalAlignment="Left" Height="28" Margin="10,26,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="168" Name="loginTb"/>
+        <TextBlock IsHitTestVisible="False" Text="Телефон или email" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,26,0,137" Foreground="DarkGray" Padding="6,3,0,0" Height="28">
+            <TextBlock.Style>
+                <Style TargetType="{x:Type TextBlock}">
+                    <Setter Property="Visibility" Value="Collapsed"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Text, ElementName=loginTb}" Value="">
+                            <Setter Property="Visibility" Value="Visible"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBlock.Style>
+        </TextBlock>
+        <PasswordBox HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Width="168" Height="28" Name="passwordTb"/>
+        <Button Content="Войти" HorizontalAlignment="Left" Margin="10,127,0,0" VerticalAlignment="Top" Width="100px" Background="#5181b8" Foreground="#fff" Height="35px" Click="Button_Click"/>
     </Grid>
 </Window>
